Fix empty grid cell in FLOW section on tablet layout

--- a/site/styles.css
+++ b/site/styles.css
@@ -686,6 +686,10 @@ address {
     grid-template-columns: 1fr 1fr;
   }
 
+  .flow-list li:last-child {
+    grid-column: 1 / -1;
+  }
+
   .gallery {
     grid-template-columns: 1fr;
   }
